--- a/AndroidUI/AndroidManifest.xml
+++ b/AndroidUI/AndroidManifest.xml
@@ -5,10 +5,20 @@
       android:versionName="1.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".Launcher"
-                  android:label="@string/app_name">
+                  android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".ImplizitLauncher"
+                  android:label="@string/app_name" 
+                  android:noHistory="true"
+                  android:theme="@style/BackgroundTheme"
+                  >
+            <intent-filter>
+                <action android:name="at.mkw.android.ui.action.START_SCENARIO"/>
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
 
